// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InviteResearcher /> Should display invalid email error 1`] = `
<div>
  <div
    class="Box-sc-1vhutan-0 jrRnPA"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      class="Box-sc-1vhutan-0 styled__StyledBox-sc-253ice-0 gniMjS CZPtF"
      overflow="auto"
    >
      <div
        class="Column-sc-4zswzq-0 ekpwZH"
      >
        <div
          class="Row-y1cs0u-0 ddPUgf"
        >
          <h1
            class="H1-sc-1k7m23t-0 ewNLte"
          >
            Invite researcher
          </h1>
          <button
            class="styled__CrossButton-sc-1kp22um-1 fPabiY"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
      <div
        class="Box-sc-1vhutan-0 hYRzjM"
      >
        <div
          class="Column-sc-4zswzq-0 ekpwZH"
        >
          <h3
            class="H3-twxrn4-0 yVyBl"
          >
            <span>
              Send another invite
            </span>
          </h3>
          <div
            class="Column-sc-4zswzq-0 cPpuJH"
            width="100%"
          >
            <p
              class="Text-e4p0w3-0 fwzRty"
              font-size="14"
            >
              <span>
                Researcher’s e-mail address
              </span>
            </p>
            <input
              class="Input-t9j2q5-0 dbCYSA"
              placeholder="e.g john.doe@contact.com"
              type="text"
              value="invalidemail"
              width="100%"
            />
            <p
              class="Text-e4p0w3-0 cuanQw"
              color="#EF462F"
              font-weight="bold"
            >
              Invalid e-mail address
            </p>
          </div>
          <h3
            class="H3-twxrn4-0 yVyBl"
          >
            <span>
              Invitations sent (2)
            </span>
          </h3>
          <div
            class="Row-y1cs0u-0 jzzpxY"
            height="46"
          >
            <p
              class="Text-e4p0w3-0 iZfJuq"
              font-size="14"
            >
              email@gmail.com
            </p>
            <button
              class="StyledTextButton-sc-1b7egxw-0 cVQKgB"
              color="#EF462F"
              font-weight="bold"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="Row-y1cs0u-0 jzzpxY"
            height="46"
          >
            <p
              class="Text-e4p0w3-0 iZfJuq"
              font-size="14"
            >
              email2@gmail.com
            </p>
            <button
              class="StyledTextButton-sc-1b7egxw-0 cVQKgB"
              color="#EF462F"
              font-weight="bold"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <button
            class="StyledButton-d2s0gt-0 eoiJLt"
            color="primary"
            disabled=""
            width="260"
          >
            <span>
              Send invitation
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InviteResearcher /> Should display server error 1`] = `
<div>
  <div
    class="Box-sc-1vhutan-0 jrRnPA"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      class="Box-sc-1vhutan-0 styled__StyledBox-sc-253ice-0 gniMjS CZPtF"
      overflow="auto"
    >
      <div
        class="Column-sc-4zswzq-0 ekpwZH"
      >
        <div
          class="Row-y1cs0u-0 ddPUgf"
        >
          <h1
            class="H1-sc-1k7m23t-0 ewNLte"
          >
            Invite researcher
          </h1>
          <button
            class="styled__CrossButton-sc-1kp22um-1 fPabiY"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
      <div
        class="Box-sc-1vhutan-0 hYRzjM"
      >
        <div
          class="Column-sc-4zswzq-0 ekpwZH"
        >
          <h3
            class="H3-twxrn4-0 yVyBl"
          >
            <span>
              Send another invite
            </span>
          </h3>
          <div
            class="Column-sc-4zswzq-0 cPpuJH"
            width="100%"
          >
            <p
              class="Text-e4p0w3-0 fwzRty"
              font-size="14"
            >
              <span>
                Researcher’s e-mail address
              </span>
            </p>
            <input
              class="Input-t9j2q5-0 dbCYSA"
              placeholder="e.g john.doe@contact.com"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <h3
            class="H3-twxrn4-0 yVyBl"
          >
            <span>
              Invitations sent (2)
            </span>
          </h3>
          <div
            class="Row-y1cs0u-0 jzzpxY"
            height="46"
          >
            <p
              class="Text-e4p0w3-0 iZfJuq"
              font-size="14"
            >
              email@gmail.com
            </p>
            <button
              class="StyledTextButton-sc-1b7egxw-0 cVQKgB"
              color="#EF462F"
              font-weight="bold"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="Row-y1cs0u-0 jzzpxY"
            height="46"
          >
            <p
              class="Text-e4p0w3-0 iZfJuq"
              font-size="14"
            >
              email2@gmail.com
            </p>
            <button
              class="StyledTextButton-sc-1b7egxw-0 cVQKgB"
              color="#EF462F"
              font-weight="bold"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <button
            class="StyledButton-d2s0gt-0 eoiJLt"
            color="primary"
            disabled=""
            width="260"
          >
            <span>
              Send invitation
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InviteResearcher /> Should render and match the snapshot 1`] = `
<div>
  <div
    class="Box-sc-1vhutan-0 jrRnPA"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      class="Box-sc-1vhutan-0 styled__StyledBox-sc-253ice-0 gniMjS CZPtF"
      overflow="auto"
    >
      <div
        class="Column-sc-4zswzq-0 ekpwZH"
      >
        <div
          class="Row-y1cs0u-0 ddPUgf"
        >
          <h1
            class="H1-sc-1k7m23t-0 ewNLte"
          >
            Invite researcher
          </h1>
          <button
            class="styled__CrossButton-sc-1kp22um-1 fPabiY"
            data-cy="modal-close-button"
            data-testid="close-modal-button"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
      <div
        class="Box-sc-1vhutan-0 hYRzjM"
      >
        <div
          class="Column-sc-4zswzq-0 ekpwZH"
        >
          <h3
            class="H3-twxrn4-0 yVyBl"
          >
            <span>
              Send another invite
            </span>
          </h3>
          <div
            class="Column-sc-4zswzq-0 cPpuJH"
            width="100%"
          >
            <p
              class="Text-e4p0w3-0 fwzRty"
              font-size="14"
            >
              <span>
                Researcher’s e-mail address
              </span>
            </p>
            <input
              class="Input-t9j2q5-0 dbCYSA"
              placeholder="e.g john.doe@contact.com"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <h3
            class="H3-twxrn4-0 yVyBl"
          >
            <span>
              Invitations sent (2)
            </span>
          </h3>
          <div
            class="Row-y1cs0u-0 jzzpxY"
            height="46"
          >
            <p
              class="Text-e4p0w3-0 iZfJuq"
              font-size="14"
            >
              email@gmail.com
            </p>
            <button
              class="StyledTextButton-sc-1b7egxw-0 cVQKgB"
              color="#EF462F"
              font-weight="bold"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="Row-y1cs0u-0 jzzpxY"
            height="46"
          >
            <p
              class="Text-e4p0w3-0 iZfJuq"
              font-size="14"
            >
              email2@gmail.com
            </p>
            <button
              class="StyledTextButton-sc-1b7egxw-0 cVQKgB"
              color="#EF462F"
              font-weight="bold"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <button
            class="StyledButton-d2s0gt-0 eoiJLt"
            color="primary"
            disabled=""
            width="260"
          >
            <span>
              Send invitation
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
